--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "zenobot-weather-monitor",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Node.js module that consults the weather information of a city and sends it on the Telegram",
   "main": "src/app.js",
   "author": "Renato Gonçalves <renatog.gonalves9@gmail.com>",
+  "scripts": {
+    "dev": "node src/app.js"
+  },
   "license": "MIT",
   "private": false,
   "dependencies": {
